WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50288
r72876
caused a ~30% perf regression in chromium's bloat-http test
https://bugs.webkit.org/show_bug.cgi?id=50288
Summary
r72876 caused a ~30% perf regression in chromium's bloat-http test
Ojan Vafai
Reported
2010-11-30 16:26:51 PST
See
http://build.chromium.org/f/chromium/perf/mac-release-10.6-webkit-latest/bloat-http/report.html?history=150&rev=-1
. That page doesn't show the webkit revision range responsible, but I gathered it from the waterfall and it's
http://trac.webkit.org/log/?verbose=on&rev=72881&stop_rev=72874
. The only code change in that revision range is
http://trac.webkit.org/changeset/72876/
. Adam, mind talking a look soonish?
Attachments
Patch
(17.89 KB, patch)
2010-11-30 19:11 PST
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2010-11-30 16:28:52 PST
Looks like the original code review had concern about removing a fast path, perhaps it wasn't a premature optimization?
https://bugs.webkit.org/show_bug.cgi?id=50182#c9
Adam Barth
Comment 2
2010-11-30 17:15:15 PST
Revert first, ask questions later.
Ojan Vafai
Comment 3
2010-11-30 19:11:41 PST
Created
attachment 75243
[details]
Patch
Ojan Vafai
Comment 4
2010-11-30 19:12:21 PST
Your wish is my command...
Ojan Vafai
Comment 5
2010-11-30 19:12:39 PST
Committed
r73002
: <
http://trac.webkit.org/changeset/73002
>
Alexey Proskuryakov
Comment 6
2010-11-30 22:36:51 PST
Comment on
attachment 75243
[details]
Patch Clearing r? in a resolved bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug