WebCore/platform/SchemeRegistry.cpp
@@ -45,12 +45,6 @@ static URLSchemesMap& localURLSchemes()
     return localSchemes;
 }
 
-static URLSchemesMap& displayIsolatedURLSchemes()
-{
-    DEFINE_STATIC_LOCAL(URLSchemesMap, displayIsolatedSchemes, ());
-    return displayIsolatedSchemes;
-}
-
 static URLSchemesMap& secureSchemes()
 {
     DEFINE_STATIC_LOCAL(URLSchemesMap, secureSchemes, ());
@@ -88,7 +82,7 @@ static URLSchemesMap& emptyDocumentSchemes()
 
 void SchemeRegistry::registerURLSchemeAsLocal(const String& scheme)
 {
-    localURLSchemes().add(scheme);
+    WebCore::localURLSchemes().add(scheme);
 }
 
 void SchemeRegistry::removeURLSchemeRegisteredAsLocal(const String& scheme)
@@ -99,15 +93,15 @@ void SchemeRegistry::removeURLSchemeRegisteredAsLocal(const String& scheme)
     if (scheme == "applewebdata")
         return;
 #endif
-    localURLSchemes().remove(scheme);
+    WebCore::localURLSchemes().remove(scheme);
 }
 
-const URLSchemesMap& SchemeRegistry::localSchemes()
+const URLSchemesMap& SchemeRegistry::localURLSchemes()
 {
-    return localURLSchemes();
+    return WebCore::localURLSchemes();
 }
 
-bool SchemeRegistry::deprecatedShouldTreatURLAsLocal(const String& url)
+bool SchemeRegistry::shouldTreatURLAsLocal(const String& url)
 {
     // This avoids an allocation of another String and the HashSet contains()
     // call for the file: and http: schemes.
@@ -124,7 +118,7 @@ bool SchemeRegistry::deprecatedShouldTreatURLAsLocal(const String& url)
         return false;
 
     String scheme = url.left(loc);
-    return localURLSchemes().contains(scheme);
+    return WebCore::localURLSchemes().contains(scheme);
 }
 
 bool SchemeRegistry::shouldTreatURLSchemeAsLocal(const String& scheme)
@@ -142,7 +136,7 @@ bool SchemeRegistry::shouldTreatURLSchemeAsLocal(const String& scheme)
     if (scheme.isEmpty())
         return false;
 
-    return localURLSchemes().contains(scheme);
+    return WebCore::localURLSchemes().contains(scheme);
 }
 
 void SchemeRegistry::registerURLSchemeAsNoAccess(const String& scheme)
@@ -153,16 +147,6 @@ void SchemeRegistry::registerURLSchemeAsNoAccess(const String& scheme)
 bool SchemeRegistry::shouldTreatURLSchemeAsNoAccess(const String& scheme)
 {
     return schemesWithUniqueOrigins().contains(scheme);
-}
-
-void SchemeRegistry::registerURLSchemeAsDisplayIsolated(const String& scheme)
-{
-    displayIsolatedURLSchemes().add(scheme);
-}
-
-bool SchemeRegistry::shouldTreatURLSchemeAsDisplayIsolated(const String& scheme)
-{
-    return displayIsolatedURLSchemes().contains(scheme);
 }
 
 void SchemeRegistry::registerURLSchemeAsSecure(const String& scheme)
